[gd_scene load_steps=3 format=3 uid="uid://m5v31kdhwpyn"]

[ext_resource type="Script" path="res://src/ui/components/debug_panel/network_inspector/network_inspector_ui.gd" id="1_c55gl"]
[ext_resource type="PackedScene" uid="uid://dvntl234e4lne" path="res://src/ui/components/debug_panel/network_inspector/request_entry.tscn" id="2_5px5s"]

[node name="NetworkInspectorUi" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c55gl")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Requests" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Header" parent="Requests" instance=ExtResource("2_5px5s")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Requests"]
layout_mode = 2
offset_top = 26.0
offset_right = 1279.0
offset_bottom = 383.0
horizontal_scroll_mode = 2
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Requests/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_top = 384.0
offset_right = 1281.0
offset_bottom = 721.0

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 0
offset_right = 1276.0
offset_bottom = 329.0

[node name="General" type="Panel" parent="Control/TabContainer"]
layout_mode = 2

[node name="Label_Title" type="Label" parent="Control/TabContainer/General"]
layout_mode = 0
offset_left = 32.0
offset_top = 80.0
offset_right = 165.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "URL:"
horizontal_alignment = 2

[node name="Label_Url" type="Label" parent="Control/TabContainer/General"]
layout_mode = 0
offset_left = 176.0
offset_top = 80.0
offset_right = 216.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "....."

[node name="Label_Title2" type="Label" parent="Control/TabContainer/General"]
layout_mode = 0
offset_left = 32.0
offset_top = 104.0
offset_right = 165.0
offset_bottom = 124.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Method:"
horizontal_alignment = 2

[node name="Label_Method" type="Label" parent="Control/TabContainer/General"]
layout_mode = 0
offset_left = 176.0
offset_top = 104.0
offset_right = 216.0
offset_bottom = 124.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "....."

[node name="Label_Title3" type="Label" parent="Control/TabContainer/General"]
layout_mode = 0
offset_left = 32.0
offset_top = 56.0
offset_right = 165.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ok:"
horizontal_alignment = 2

[node name="Label_OK" type="Label" parent="Control/TabContainer/General"]
layout_mode = 0
offset_left = 176.0
offset_top = 56.0
offset_right = 216.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "....."

[node name="Label_Title4" type="Label" parent="Control/TabContainer/General"]
visible = false
layout_mode = 0
offset_left = 32.0
offset_top = 128.0
offset_right = 165.0
offset_bottom = 148.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "URL:"
horizontal_alignment = 2

[node name="Label_Url4" type="Label" parent="Control/TabContainer/General"]
visible = false
layout_mode = 0
offset_left = 176.0
offset_top = 128.0
offset_right = 216.0
offset_bottom = 148.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "....."

[node name="Label_Title5" type="Label" parent="Control/TabContainer/General"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 165.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Status:"
horizontal_alignment = 2

[node name="Label_Status" type="Label" parent="Control/TabContainer/General"]
layout_mode = 0
offset_left = 176.0
offset_top = 32.0
offset_right = 216.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "....."

[node name="RequestHeaders" type="Panel" parent="Control/TabContainer"]
visible = false
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="Control/TabContainer/RequestHeaders"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 1100.0
offset_bottom = 279.0

[node name="RequestBody" type="Panel" parent="Control/TabContainer"]
visible = false
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="Control/TabContainer/RequestBody"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 1100.0
offset_bottom = 279.0

[node name="ResponseHeaders" type="Panel" parent="Control/TabContainer"]
visible = false
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="Control/TabContainer/ResponseHeaders"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 1100.0
offset_bottom = 279.0

[node name="ResponseBody" type="Panel" parent="Control/TabContainer"]
visible = false
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="Control/TabContainer/ResponseBody"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 1100.0
offset_bottom = 279.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
